--- a/blogsite/blogsiteinfo.html
+++ b/blogsite/blogsiteinfo.html
@@ -64,7 +64,7 @@ Most recent revision: 4/4/2019
             </ul>
             <p>Posts have categories and hashtags. These are other objects that
                 both have a many to many relationship with Posts.</p>
-            <p>Below, I added some comments to this image to show how each property is displayed</p>
+            <p>Below, I added some comments to this image to show how each property is displayed.</p>
 
             <div class="phone-size-container">
                 <img class="medium-size" src="../landingPageImages/blog6.png" alt="First slide">
@@ -77,7 +77,7 @@ Most recent revision: 4/4/2019
                 Contributer.
                 So this means that anyone who doesn't have log-in information can only view Home and Content.</p>
             <p>Once a user logs in, They gain more functionality such as they above mentioned (CRUD) for posts. Let's
-                log in as a contributer</p>
+                log in as a contributer.</p>
 
             <div class="col-12">
                 <div class="row">
@@ -100,7 +100,7 @@ Most recent revision: 4/4/2019
             </div>
             <div class="caption"><em>The table is responsive, so heres what it looks like on a phone</em>
             </div>
-            <p>The side-bar has allowed access to new features. A button to create posts, and another to manage them</p>
+            <p>The side-bar has allowed access to new features. A button to create posts, and another to manage them.</p>
 
             <img class="d-block w-100" src="../landingPageImages/bloggif4.gif" alt="First slide">
             <div class="caption"><em>Here, a user can create a new post and upload an image with the post using this
@@ -129,7 +129,7 @@ Most recent revision: 4/4/2019
             <p> Now although any contributer can create a post, and view/manage their own posts, the post will not go
                 'live' unless approved by an admin.
                 The property 'isPublished' will not be set to true unless an admin goes in and approves it. Let's move
-                onto admins.
+                on to admins.
             </p>
 
             <div class="phone-size-container">
