changing source code link

--- a/blogsite/blogsiteinfo.html
+++ b/blogsite/blogsiteinfo.html
@@ -26,7 +26,7 @@ Most recent revision: 4/4/2019
         <section>
             <p>● Technologies Used: Java, Spring Boot, JDBC Template, MySQL, Thymeleaf,
                 JavaScript, Spring Security</p>
-            <a href="#bottom">source code link at the end</a>
+            <a href="https://github.com/stephenespinal22/SoftwareGuildWork/tree/master/Classwork/M9/Mastery" target="_blank">source code</a>
             <img class="d-block w-100" src="../landingPageImages/blog1.png" alt="First slide">
             <div class="caption"><em>Home Page with admin side-bar active. This page will display the 4 most recent
                     posts</em></div>
