changing source code link

--- a/supertracker/supertrackerinfo.html
+++ b/supertracker/supertrackerinfo.html
@@ -28,8 +28,7 @@ Most recent revision: 4/4/2019
             <p>● Technologies Used: Java, Spring Boot, JDBC Template, MySQL, Thymeleaf,
                 Leaflet, JavaScript, CSS/Bootstrap</p>
 
-            <a href="https://github.com/stephenespinal22/M9SuperHeroSJC" target="_blank">source code</a>
-            <br/>
+            <a href="https://github.com/stephenespinal22/M9SuperHeroSJC" target="_blank" style="padding-bottom: 50px;">source code</a>
             <img class="d-block w-100" src="../landingPageImages/tracker1.png" alt="First slide">
             <div class="caption"><em>Home Page with map of recent sightings. This page will display the 10 most recent
                     sightings</em></div>
