--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Most recent revision: 4/4/2019
     <div class="row ">
       <div class="col-12">
         <section class="project">
-          <h3 class="project-banner">● BlogPosts<a class="visit" href="https://sedev-blogsite.herokuapp.com"
+          <h3 class="project-banner">● BlogPosts<a class="viewMore" href="blogsite/blogsiteinfo.html">View More Info</a><a class="visit" href="https://sedev-blogsite.herokuapp.com"
             target="_blank">Visit Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
@@ -138,13 +138,12 @@ Most recent revision: 4/4/2019
             </div>
           </div>
           <!--/Carousel Wrapper-->
-          <a class="viewMore" href="blogsite/blogsiteinfo.html">View More Info</a>
         </section>
 
         </br></br>
 
         <section class="project">
-          <h3 class="project-banner">● SuperTracker<a class="visit" href="https://sedev-supertracker.herokuapp.com"
+          <h3 class="project-banner">● SuperTracker<a class="viewMore" href="supertracker/supertrackerinfo.html">View More Info</a><a class="visit" href="https://sedev-supertracker.herokuapp.com"
               target="_blank">Visit Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
@@ -187,7 +186,6 @@ Most recent revision: 4/4/2019
             </div>
           </div>
           <!--/Carousel Wrapper-->
-          <a class="viewMore" href="supertracker/supertrackerinfo.html">View More Info</a>
         </section>
         </br></br>
       </div>
